--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,19 @@
 			<version>0.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>pl.pdfviewer</groupId>
+			<artifactId>pdfviewer</artifactId>
+			<version>1.3.6</version>
+		</dependency>
+
+		<!--LIBRERIA PARA CONVERTIR A PDF -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.11</version>
+		</dependency>
+
 		<!-- jdbc postgresql version 9.2 y posteriores -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -130,6 +143,31 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<!-- JXLS -->
+		<dependency>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls-poi</artifactId>
+			<version>1.0.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls-jexcel</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+
 		<!-- MyBatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
